--- a/prod.settings.json
+++ b/prod.settings.json
@@ -1,6 +1,6 @@
 {
     "baseClientUrl": "https://www.imdb.com/",
     "env": {
-        "baseServerEndpoint": "https://pokeapi.co/"
+        "baseServerUrl": "https://pokeapi.co/"
     }
 }
