--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "scripts": {
+    "cy:open": "cypress open",
+    "cy:open:prod": "cypress open --env environmentName=prod",
+    "lint": "eslint \"cypress/**/*.js\"",
+    "prettier": "prettier --write \"**/*.{js,json,md,ts,html}\""
+  },
   "devDependencies": {
-    "cypress": "^14.3.0"
+    "@eslint/js": "^9.24.0",
+    "cypress": "^14.3.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3"
   }
 }
